[package]
name = "my_eth"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-eips = { version = "1.1.3", default-features = false }
alloy-provider = "1.4"
anyhow = "1.0.100"
revm = { version = "34.0.0", features = ["alloydb"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
bip39 = { version = "2", features = ["rand"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
alloy-transport-http = "1.6.1"
alloy-signer = "1.6.1"
alloy-signer-local = "1.6.1"
alloy-rpc-types = "1.6.1"
alloy-primitives = "1.5.4"

